# case-utils

./: .gitignore  .gitmodules  1  LICENSE  README.md  async_demo.py  pyproject.toml  requirements.txt  test.py  utils.py  utils_wrapper.py
.github/workflows/: ci.yml
case_utils/: README.md  __init__.py  utils.py  utils_async.py
data_backup/: sample2.csv
docs/: AI_DL_QA_Engineer_Study_Guide.md  AI_QA_Engineer_Learning_Plan.md  ai_test_studay.md  claude-ai-test.md  workflow.puml
docs/ai_concept/: AI_Beginner_Concepts_QA.md
docs/weekly/: new-study-day1.md  new-study-day1_to_day12_detail.md  new-study-plan.md  week1_summary.md  week2_summary.md  week3_summary.md
docs/work/: ai_test_and_my_responsity_day1.md  jd_br.md  numpy  typing
monitor/: monitor.py
tests/: test_utils.py
