[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "case-utils"
version = "0.1.0"
description = "Utility library for async CSV handling"
authors = [{name="Your Name", email="you@example.com"}]
dependencies = [
    "pandas>=2.0",
    "aiofiles>=23.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["case_utils*"]
